--- a/dev.deedles.Trayscale.yml
+++ b/dev.deedles.Trayscale.yml
@@ -32,6 +32,8 @@ modules:
       - install -Dm0644 dev.deedles.Trayscale.png $FLATPAK_DEST/share/icons/hicolor/256x256/apps/dev.deedles.Trayscale.png
       - install -Dm0644 dev.deedles.Trayscale.desktop $FLATPAK_DEST/share/applications/dev.deedles.Trayscale.desktop
       - install -Dm0644 dev.deedles.Trayscale.metainfo.xml $FLATPAK_DEST/share/metainfo/dev.deedles.Trayscale.metainfo.xml
+      - install -Dm0644 dev.deedles.Trayscale.gschema.xml $FLATPAK_DEST/share/glib-2.0/schemas/dev.deedles.Trayscale.gschema.xml
+      - glib-compile-schemas $FLATPAK_DEST/share/glib-2.0/schemas
     sources:
       - type: git
         url: https://github.com/DeedleFake/trayscale
