StatusNotifierWatcher should be the only permission required to provide tray functionalities on KDE

--- a/dev.deedles.Trayscale.yml
+++ b/dev.deedles.Trayscale.yml
@@ -16,6 +16,7 @@ finish-args:
   - --share=ipc
   - --filesystem=/run/tailscale:ro
   - --talk-name=org.freedesktop.Notifications
+  - --talk-name=org.kde.StatusNotifierWatcher
   - --metadata=X-DConf=migrate-path=/dev/deedles/Trayscale/
 
 build-options:
